RESOLVED FIXED109508
WEBGL_compressed_texture_s3tc extension can be enabled even when not supported
https://bugs.webkit.org/show_bug.cgi?id=109508
Summary WEBGL_compressed_texture_s3tc extension can be enabled even when not supported
Kenneth Russell
Reported 2013-02-11 15:59:13 PST
It's been pointed out by Evan Parker from the MapsGL team that getExtension("WEBGL_compressed_texture_s3tc") is returning a non-null value even when the underlying hardware doesn't support the extension. A supports() check in getExtension is missing.
Attachments
Patch (1.83 KB, patch)
2013-02-11 16:28 PST, Zhenyao Mo
kbr: review+
Zhenyao Mo
Comment 1 2013-02-11 16:28:13 PST
Kenneth Russell
Comment 2 2013-02-11 16:31:24 PST
Comment on attachment 187716 [details] Patch Thanks for the quick fix. Looks good. Note for the record that this will eventually be covered by the WebGL conformance tests Gregg Tavares is in the process of importing.
WebKit Review Bot
Comment 3 2013-02-11 16:32:46 PST
Attachment 187716 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/canvas/WebGLRenderingContext.cpp']" exit_code: 1 Source/WebCore/html/canvas/WebGLRenderingContext.cpp:2409: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebCore/html/canvas/WebGLRenderingContext.cpp:2410: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zhenyao Mo
Comment 4 2013-02-11 16:32:56 PST
Note You need to log in before you can comment on or make changes to this bug.