WEBGL_compressed_texture_s3tc extension can be enabled even when not supported https://bugs.webkit.org/show_bug.cgi?id=109508

Reviewed by Kenneth Russell.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::getExtension): Check whether the extension support is there before returning the extension pointer.


Canonical link: https://commits.webkit.org/127784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142545 268f45cc-cd09-0410-ab3c-d52691b4dbfc